# foundry

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  claude-agentic-workflow-builder.v0.5.md  foundry-gui-design.v0.1.md  pyproject.toml
.claude/: hooks  settings.json  shared
.claude/agents/: architect.md  ba.md  developer.md  team-lead.md  tech-qa.md
.claude/commands/: backlog-consolidate.md  backlog-refinement.md  bean-status.md  bg.md  bug.md  chore.md  commands.md  deploy.md  docs-update.md  feature.md  generate-image.md  generate-screen.md  git-status.md  health-check.md  implement.md  internal  long-run.md  merge-bean.md  new-bean.md  pick-bean.md  review-beans.md  run.md  show-backlog.md  spawn-bean.md  spawn-task.md  status-report.md  telemetry-report.md  test-gen.md  tools.md  trello-add.md
.claude/hooks/: bash_safety.py  format-on-save.py  hook-policy.md  post-task-qa.md  pre-commit-lint.md  session-start-context.py  stop-quality-reminder.py  telemetry-stamp.py  validate-task-inputs.py  vdd-gate.py  write_safety.py
.claude/skills/: backlog-consolidate  backlog-refinement  bean-status  bg  commands  deploy  docs-update  generate-audio  generate-image  generate-screen  health-check  internal  long-run  new-work  orchestration-report  pick-bean  review-beans  (+5 more)
ai-team-library/: README.md
commands/: long-run.md
docs/: backlog-refinement-deep-dive.md  bean-131-backlog-refinement-analysis.md  bean-132-long-run-analysis.md  bean-133-show-backlog-analysis.md  bean-134-backlog-consolidate-analysis.md  bean-137-team-member-assignment-analysis.md  bean-138-team-member-participation-decisions.md  bean-140-trello-bean-lifecycle-mapping.md  bean-141-token-usage-optimization-analysis.md  claude-kit.md  long-run-deep-dive.md  starter-stacks.md  telemetry-report-deep-dive.md
examples/: drill-deck-base.yml  foundry-dogfood.yml  full-stack-web.yml  security-focused.yml  small-python-team.yml
foundry_app/: __init__.py  __main__.py  cli.py  main.py
scripts/: backfill-bean-durations.py  claude-link.sh  claude-publish.sh  claude-sync.sh  kit-contribute.sh  measure_bean_259_savings.py
tests/: conftest.py  test_agent_writer.py  test_architecture_page.py  test_asset_copier.py  test_asset_copier_kit_distribution.py  test_bean_approval.py  test_builder_screen.py  test_cli.py  test_command_create.py  test_command_delete.py  test_command_read.py  test_compiler.py  test_composition_io.py  test_diff_reporter.py  test_expertise_page.py  test_export.py  test_export_screen.py  test_generate_audio.py  test_generate_image.py  test_generation_invariants.py  test_generation_progress.py  test_generation_worker.py  test_generator.py  test_history_screen.py  test_hook_delete.py  test_hook_read.py  test_hook_safety_page.py  test_icons.py  test_input_bounds.py  test_library_indexer.py  test_library_manager.py  test_logging.py  test_logging_config.py  test_main_window.py  test_mcp_writer.py  test_media_lib.py  test_models.py  test_orchestration_report.py  test_orchestration_telemetry.py  test_path_traversal.py  (+37 more)
(+1551 files in other folders)
