[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry"
version = "1.0.0"
description = "Generate Claude Code project folders from reusable building blocks"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "PySide6>=6.5",
    "mistune>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
foundry = "foundry_app.main:main"
foundry-cli = "foundry_app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["foundry_app"]

[tool.hatch.build.targets.wheel.force-include]
"resources/images" = "foundry_app/_resources/images"
"resources/icons" = "foundry_app/_resources/icons"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
